Fixing menu z-index

--- a/src/menu/_menu.scss
+++ b/src/menu/_menu.scss
@@ -25,6 +25,7 @@
   overflow: visible;
   height: 0;
   width: 0;
+  z-index: 999;
 }
 
 .mdl-menu__outline {
@@ -45,6 +46,7 @@
   will-change: transform;
   transition: transform $menu-expand-duration $animation-curve-default,
       opacity $menu-fade-duration $animation-curve-default;
+  z-index: 999;
 
   .mdl-menu__container.is-visible & {
     opacity: 1;
@@ -76,6 +78,7 @@
   margin: 0;
   opacity: 0;
   clip: rect(0 0 0 0);
+  z-index: 999;
 
   .mdl-menu__container.is-visible & {
     opacity: 1;
